added some base sense of style

--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
         <title>Portfolio Andrew Epermanis</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     </head>
+
     <body>
-        <H1>Andrew Epermanis</H1>
-        <nav>
+        <header>
+            <h1>Andrew Epermanis</h1>
             <ul>
-                <li>About Me</li>
-                <li>Contact Information</li>
-                <li>Projects</li>
+                    <li><a href="#aboutme"></a>About Me</li>
+                    <li><a href="#contact"></a>Contact Information</li>
+                    <li><a href="#projects"></a>Projects</li>
             </ul>
-        </nav>
-        <section>
+        </header>
+        
+        <section id="aboutme" class="info">
             <h2>About Me</h2>
             <Div>
                 <img src="" alt="headshot">
                 <p>jahfjohdbaijofbjadsb sadjbhflkjdasbfjbasdjk lkasfljkbasdlkjflj;adsn;</p>
             </Div>
         </section>
-        <section>
+
+        <section id="contact" class="info">
             <h2>Contact Information</h2>
             <ul>
                <li>Phone: 336-493-0606</li>
                <li>Email: aepermanis@gmail.com</li>
             </ul>
         </section>
-        <section>
+
+        <section id="projects" class="info">
             <h2>Projects</h2>
             <ul>
                 <li>
