added final styling, inserted some pictures and comments

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section id="aboutme" class="info">
             <h2>About Me</h2>
             <Div>
-                <img src="" alt="headshot">
-                <p>jahfjohdbaijofbjadsb sadjbhflkjdasbfjbasdjk lkasfljkbasdlkjflj;adsn;</p>
+                <img src="./assets/goose-headshot.jpg" alt="headshot">
+                <p>I am a graduate of the University of North Carolina Chapel Hill. Currently working as a youth minister and am looking to make a career change. Below you will find project that exemplify my work. Etc, Etc. I will fill this in with a more complete story as the class goes. For now, this is placeholder text. </p>
             </Div>
         </section>
 
@@ -37,21 +37,21 @@
             <h2>Projects</h2>
             <ul>
                 <li>
-                    <div>
-                        <img src="" alt="">
-                        <a href="" ></a>
+                    <div class="example">
+                        <img src="./assets/code-refacto.png" alt="code refacto">
+                        <a class="launch" href="https://aepermanis.github.io/Horiseon-Code-Refactor/#search-engine-optimization" >code refacto</a>
                     </div>
                 </li>
                 <li>
-                    <div>
-                        <img src="" alt="">
-                        <a href="" ></a>
+                    <div class="example">
+                        <img src="" alt="coming soon">
+                        <a class="launch" href="" >coming soon</a>
                     </div>
                 </li>
                 <li>
-                    <div>
-                        <img src="" alt="">
-                        <a href="" ></a>
+                    <div class="example">
+                        <img src="" alt="coming soon">
+                        <a class="launch" href="" >coming soon</a>
                     </div>
                 </li>
             </ul>
