--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 </li>
                 <li>
                     <div class="example">
-                        <img src="" alt="coming soon">
+                        <img src="./assets/new-york.jpg" alt="coming soon">
                         <a class="launch" href="" >coming soon</a>
                     </div>
                 </li>
                 <li>
                     <div class="example">
-                        <img src="" alt="coming soon">
+                        <img src="./assets/new-york.jpg" alt="coming soon">
                         <a class="launch" href="" >coming soon</a>
                     </div>
                 </li>
