added a footer and style for footer

--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@
             </Div>
         </section>
 
-        <section id="contact" class="info">
-            <h2>Contact Information</h2>
-            <ul>
-               <li>Phone: 336-493-0606</li>
-               <li>Email: aepermanis@gmail.com</li>
-            </ul>
-        </section>
-
         <section id="projects" class="info">
             <h2>Projects</h2>
             <ul>
@@ -55,9 +47,18 @@
                     </div>
                 </li>
             </ul>
+            
 
         </section>
 
+        <footer  id="contact" class="info">
+            <h2>Contact Information</h2>
+        <ul>
+           <li>Phone: 336-493-0606</li>
+           <li>Email: aepermanis@gmail.com</li>
+        </ul>
+
+        </footer>
 
     </body>
 </html>
