--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </li>
                 <li>
                     <div class="example">
-                        <img src="./assets/new-york.jpg" alt="coming soon">
-                        <a class="launch" href="" >coming soon</a>
+                        <img src="./assets/Screenshot 2023-07-23 at 3.29.23 PM.png" alt="MemeFlix">
+                        <a class="https://eddyk15501.github.io/gifs-and-memes/ href=" >MemeFlix</a>
                     </div>
                 </li>
                 <li>
