fixed small bug

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li>
                     <div class="example">
                         <img src="./assets/Screenshot 2023-07-23 at 3.29.23 PM.png" alt="MemeFlix">
-                        <a class="https://eddyk15501.github.io/gifs-and-memes/ href=" >MemeFlix</a>
+                        <a class="launch" href="https://eddyk15501.github.io/gifs-and-memes/" >MemeFlix</a>
                     </div>
                 </li>
                 <li>
