updated links for project 2

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </li>
                 <li>
                     <div class="example">
-                        <img src="./assets/new-york.jpg" alt="coming soon">
-                        <a class="launch" href="" >coming soon</a>
+                        <img src="/assets/POS.png" alt="Restro POS">
+                        <a class="launch" href="https://restro-pos-1a58ccf47cea.herokuapp.com/" >Restro POS</a>
                     </div>
                 </li>
             </ul>
